WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131364
WinCairo crashes on acid3 test
https://bugs.webkit.org/show_bug.cgi?id=131364
Summary
WinCairo crashes on acid3 test
Alex Christensen
Reported
2014-04-08 09:42:31 PDT
When opening
http://acid3.acidtests.org/
in WinCairo's WinLauncher I get a "Frame load interrupted" Error dialog and then it crashes sometimes if you continue. Does anyone else have this problem? I think it might be from not cancelling something in the CURL code, but I have no idea what.
Attachments
Patch
(4.01 KB, patch)
2014-05-10 14:37 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(4.01 KB, patch)
2014-05-10 15:43 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-04-08 10:40:17 PDT
(In reply to
comment #0
)
> When opening
http://acid3.acidtests.org/
in WinCairo's WinLauncher I get a "Frame load interrupted" Error dialog and then it crashes sometimes if you continue. Does anyone else have this problem? I think it might be from not cancelling something in the CURL code, but I have no idea what.
I've seen this too, on other web sites. Not sure what causes it, though.
peavo
Comment 2
2014-05-10 14:37:03 PDT
Created
attachment 231236
[details]
Patch
Brent Fulgham
Comment 3
2014-05-10 15:34:15 PDT
Comment on
attachment 231236
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231236&action=review
Nice work tracking this down! Thank you for all your help. R=me.
> Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:536 > + String url = job->firstRequest().url().string();
This should be a const reference to avoid making an extra copy.
peavo
Comment 4
2014-05-10 15:43:23 PDT
Created
attachment 231242
[details]
Patch
peavo
Comment 5
2014-05-10 15:45:15 PDT
(In reply to
comment #3
)
> (From update of
attachment 231236
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=231236&action=review
> > Nice work tracking this down! Thank you for all your help. R=me. >
Thanks :)
> > Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:536 > > + String url = job->firstRequest().url().string(); > > This should be a const reference to avoid making an extra copy.
Updated patch.
Brent Fulgham
Comment 6
2014-05-10 23:31:16 PDT
Comment on
attachment 231242
[details]
Patch R=me
WebKit Commit Bot
Comment 7
2014-05-11 00:01:44 PDT
Comment on
attachment 231242
[details]
Patch Clearing flags on attachment: 231242 Committed
r168596
: <
http://trac.webkit.org/changeset/168596
>
WebKit Commit Bot
Comment 8
2014-05-11 00:01:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug