Source/WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -532,7 +532,11 @@ static size_t headerCallback(char* ptr, size_t size, size_t nmemb, void* data)
         }
 
         if (client) {
-            client->didReceiveResponse(job, d->m_response); 
+            if (httpCode == 304) {
+                const String& url = job->firstRequest().url().string();
+                CurlCacheManager::getInstance().getCachedResponse(url, d->m_response);
+            }
+            client->didReceiveResponse(job, d->m_response);
             CurlCacheManager::getInstance().didReceiveResponse(job, d->m_response);
         }
         d->m_response.setResponseFired(true);
